сделал разметку, добавил имя

--- a/index.html
+++ b/index.html
@@ -1,120 +1,137 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Нёрдс</title>
+    <meta charset="utf-8">
+    <title>Nerd's</title>
 </head>
 <body>
 
 <header class="main-header">
-  <a href="#" class="logo"></a>
-  <nav class="main-navigation">
-    <ul class="navigation-list">
-      <li class="navigation-item"><a href="#">Студия</a></li>
-      <li class="navigation-item"><a href="#">Клиенты</a></li>
-      <li class="navigation-item"><a href="#">Магазин</a></li>
-      <li class="navigation-item"><a href="#">Контакты</a></li>
-    </ul>
-    <a href="#" class="basket">Корзина</a>
-  </nav>
+    <div class="wrap">
+        <a href="#" class="logo">
+            <img src="img/nerds-logo.png" alt="nerds" width="160" height="65">
+        </a>
+        <nav class="main-navigation">
+            <ul class="navigation-list">
+                <li class="navigation-item"><a href="#">Студия</a></li>
+                <li class="navigation-item"><a href="#">Клиенты</a></li>
+                <li class="navigation-item"><a href="#">Магазин</a></li>
+                <li class="navigation-item"><a href="#">Контакты</a></li>
+            </ul>
+            <a href="#" class="basket">Корзина</a>
+        </nav>
+    </div>
 </header>
 
 <div class="promo">
-  <div class="promo-info">
-    <div class="h">Дорого, долго, скурпулезно.</div>
-    <p>Математически выверенный дизайн<br>
-      для вашего сайта или мобильного приложения.
-    </p>
-    <a href="#" class="btn promo-info-btn">Узнать больше</a>
-  </div>
-  <div class="promo-slider">
-  </div>
+    <div class="wrap">
+        <div class="promo-info">
+            <div class="h">Дорого, долго, скурпулезно.</div>
+            <p>Математически выверенный дизайн<br>
+                для вашего сайта или мобильного приложения.
+            </p>
+            <a href="#" class="btn promo-info-btn">Узнать больше</a>
+        </div>
+        <div class="promo-slider">
+            <div class="promo-slider-first">
+            </div>
+            <div class="promo-slider-second">
+            </div>
+            <div class="promo-slider-third">
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="features">
-  <div class="features-left">
-    <div class="features-image">
+    <div class="wrap">
+        <div class="features-left">
+            <div class="features-image">
+            </div>
+            <div class="features-description">
+                <h3>Веб сайты</h3>
+                <p>Мир никогда не будет прежним
+                    после того как увидит ваш сайт!</p>
+                <a href="#" class="btn features-left-btn">Заказать</a>
+            </div>
+        </div>
+        <div class="features-center">
+            <div class="features-image">
+            </div>
+            <div class="features-description">
+                <h3>Приложения</h3>
+                <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+                <a href="#" class="btn features-center-btn">Заказать</a>
+            </div>
+        </div>
+        <div class="features-right">
+            <div class="features-image">
+            </div>
+            <div class="features-description">
+                <h3>Презентации</h3>
+                <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+                <a href="#" class="btn features-right-btn">Заказать</a>
+            </div>
+        </div>
     </div>
-    <div class="features-description">
-      <h3>Веб сайты</h3>
-      <p>Мир никогда не будет прежним
-        после того как увидит ваш сайт!</p>
-      <a href="#" class="btn features-left-btn">Заказать</a>
+
+    <div class="index-info">
+        <div class="index-info-description">
+            <h2>Мы - маленька, но гордая дизайн-студия из Краснодара.</h2>
+            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
+                Работаем не покладая рук, как роботы.</p>
+            <span class="index-info-h">Выполянем заказы на разработку:</span>
+            <ul>
+                <li>Веб-сайтов любой сложности</li>
+                <li>Мобильных приложений для iOS и Android</li>
+                <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+        </div>
+        <div class="index-info-stat">
+            <span class="stat-h">С 2004 года любим точность во всем:</span>
+            <div class="stat-left">
+                <span class="stat-percent">146%</span>
+                <span class="stat-description">Уровень самоотдачи</span>
+            </div>
+            <div class="stat-center">
+                <span class="stat-percent">100%</span>
+                <span class="stat-description">Соблюдение сроков</span>
+            </div>
+            <div class="stat-right">
+                <span class="stat-percent">50%</span>
+                <span class="stat-description">Минимальная предоплата</span>
+            </div>
+        </div>
+
+        <div class="partners-logos">
+            <ul class="partners-logos-list">
+                <li><a href="#" class="partner-logo"><img src="img/logo-1.png" width="199" height="68"></a></li>
+                <li><a href="#" class="partner-logo"><img src="img/logo-2.png" width="209" height="90"></a></li>
+                <li><a href="#" class="partner-logo"><img src="img/logo-3.png" width="185" height="52"></a></li>
+                <li><a href="#" class="partner-logo"><img src="img/logo-4.png" width="173" height="84"></a></li>
+            </ul>
+        </div>
     </div>
-  </div>
-  <div class="features-center">
-    <div class="features-image">
-    </div>
-    <div class="features-description">
-      <h3>Приложения</h3>
-      <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-      <a href="#" class="btn features-center-btn">Заказать</a>
-    </div>
-  </div>
-  <div class="features-right">
-    <div class="features-image">
-    </div>
-    <div class="features-description">
-      <h3>Презентации</h3>
-      <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-      <a href="#" class="btn features-right-btn">Заказать</a>
-    </div>
-  </div>
 </div>
 
-<div class="index-info">
-  <div class="index-info-description">
-    <h2>Мы - маленька, но гордая дизайн-студия из Краснодара.</h2>
-    <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
-    Работаем не покладая рук, как роботы.</p>
-    <span class="index-info-h">Выполянем заказы на разработку:</span>
-    <ul>
-      <li>Веб-сайтов любой сложности</li>
-      <li>Мобильных приложений для iOS и Android</li>
-      <li>Слайдшоу и видео для корпоративных презентаций</li>
-    </ul>
-  </div>
-  <div class="index-info-stat">
-<span class="stat-h">С 2004 года любим точность во всем:</span>
-    <div class="stat-left">
-    <span class="stat-percent">146%</span>
-      <span class="stat-description">Уровень самоотдачи</span>
-    </div>
-    <div class="stat-center">
-      <span class="stat-percent">100%</span>
-      <span class="stat-description">Соблюдение сроков</span>
-    </div>
-    <div class="stat-right">
-      <span class="stat-percent">50%</span>
-      <span class="stat-description">Минимальная предоплата</span>
-    </div>
-  </div>
-
-  <div class="partners-logos">
-    <ul class="partners-logos-list">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-  </div>
-</div>
 
 <div class="map">
-  <img src="#" alt="карта">
-<div class="map-address"></div>
+    <img src="img/map.jpg" width="1440" height="416" alt="карта">
+    <div class="map-address"></div>
 </div>
 
 <footer class="main-footer">
-  <div class="social">
-    <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-    <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-    <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-  </div>
-  <div class="footer-info">
-    <h3></h3>
-    <p></p>
-  </div>
+    <div class="wrap">
+        <div class="social">
+            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </div>
+        <div class="footer-info">
+            <h3>Давайте дружить, это выгодно!</h3>
+            <p>Скидка 10% для друзей из социальных сетей.</p>
+        </div>
+    </div>
 </footer>
 
 </body>
