начал делать сетку

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Nerd's</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 
@@ -76,30 +78,32 @@
     </div>
 
     <div class="index-info">
-        <div class="index-info-description">
-            <h2>Мы - маленька, но гордая дизайн-студия из Краснодара.</h2>
-            <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
-                Работаем не покладая рук, как роботы.</p>
-            <span class="index-info-h">Выполянем заказы на разработку:</span>
-            <ul>
-                <li>Веб-сайтов любой сложности</li>
-                <li>Мобильных приложений для iOS и Android</li>
-                <li>Слайдшоу и видео для корпоративных презентаций</li>
-            </ul>
-        </div>
-        <div class="index-info-stat">
-            <span class="stat-h">С 2004 года любим точность во всем:</span>
-            <div class="stat-left">
-                <span class="stat-percent">146%</span>
-                <span class="stat-description">Уровень самоотдачи</span>
+        <div class="wrap">
+            <div class="index-info-description">
+                <h2>Мы - маленька, но гордая дизайн-студия из Краснодара.</h2>
+                <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
+                    Работаем не покладая рук, как роботы.</p>
+                <span class="index-info-h">Выполянем заказы на разработку:</span>
+                <ul>
+                    <li>Веб-сайтов любой сложности</li>
+                    <li>Мобильных приложений для iOS и Android</li>
+                    <li>Слайдшоу и видео для корпоративных презентаций</li>
+                </ul>
             </div>
-            <div class="stat-center">
-                <span class="stat-percent">100%</span>
-                <span class="stat-description">Соблюдение сроков</span>
-            </div>
-            <div class="stat-right">
-                <span class="stat-percent">50%</span>
-                <span class="stat-description">Минимальная предоплата</span>
+            <div class="index-info-stat">
+                <span class="stat-h">С 2004 года любим точность во всем:</span>
+                <div class="stat-left">
+                    <span class="stat-percent">146%</span>
+                    <span class="stat-description">Уровень самоотдачи</span>
+                </div>
+                <div class="stat-center">
+                    <span class="stat-percent">100%</span>
+                    <span class="stat-description">Соблюдение сроков</span>
+                </div>
+                <div class="stat-right">
+                    <span class="stat-percent">50%</span>
+                    <span class="stat-description">Минимальная предоплата</span>
+                </div>
             </div>
         </div>
 
