--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Nerd's</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 
