--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,7 @@
         <div class="left-column">
 
             <div class="filters">
-                <form action="#" method="post" class="sort">
+                <form action="#" method="post" class="sort-form">
 
                     <fieldset class="filters-groups filters-radio">
                         <legend>Сетка:</legend>
