начал делать стили

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 
 <header class="main-header">
     <div class="wrap">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
             <img src="img/nerds-logo.png" alt="nerds" width="160" height="65">
         </a>
         <nav class="main-navigation">
