--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header class="main-header">
     <div class="wrap">
-        <a href="#" class="logo">
+        <a class="logo" href="#">
             <img src="img/nerds-logo.png" alt="nerds" width="160" height="65">
         </a>
         <nav class="main-navigation">
@@ -27,29 +27,40 @@
 
 <div class="promo">
     <div class="wrap">
-        <div class="promo-info">
-            <div class="h">Дорого, долго, скурпулезно.</div>
+        <div class="slide">
+            <div class="slide-title">Дорого, долго, скурпулезно.</div>
             <p>Математически выверенный дизайн<br>
                 для вашего сайта или мобильного приложения.
             </p>
             <a href="#" class="btn promo-info-btn">Узнать больше</a>
         </div>
-        <div class="promo-slider">
-            <div class="promo-slider-first">
-            </div>
-            <div class="promo-slider-second">
-            </div>
-            <div class="promo-slider-third">
-            </div>
-        </div>
+
+
+        <!--<div class="promo-info">
+
+
+           <div class="h">Дорого, долго, скурпулезно.</div>
+           <p>Математически выверенный дизайн<br>
+               для вашего сайта или мобильного приложения.
+           </p>
+           <a href="#" class="btn promo-info-btn">Узнать больше</a>
+       </div>
+       <div class="promo-slider">
+           <div class="promo-slider-first">
+           </div>
+           <div class="promo-slider-second">
+           </div>
+           <div class="promo-slider-third">
+           </div>
+       </div>
+       -->
     </div>
 </div>
 
 <div class="features">
     <div class="wrap">
         <div class="features-left">
-            <div class="features-image">
-            </div>
+
             <div class="features-description">
                 <h3>Веб сайты</h3>
                 <p>Мир никогда не будет прежним
@@ -58,8 +69,7 @@
             </div>
         </div>
         <div class="features-center">
-            <div class="features-image">
-            </div>
+
             <div class="features-description">
                 <h3>Приложения</h3>
                 <p>Покорите топ-10 приложений в AppStore и Google Play</p>
@@ -67,8 +77,7 @@
             </div>
         </div>
         <div class="features-right">
-            <div class="features-image">
-            </div>
+
             <div class="features-description">
                 <h3>Презентации</h3>
                 <p>Вы даже не подозреваете, насколько вы изумительны!</p>
@@ -83,7 +92,7 @@
                 <h2>Мы - маленька, но гордая дизайн-студия из Краснодара.</h2>
                 <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
                     Работаем не покладая рук, как роботы.</p>
-                <span class="index-info-h">Выполянем заказы на разработку:</span>
+                <span class="index-info-title">Выполянем заказы на разработку:</span>
                 <ul>
                     <li>Веб-сайтов любой сложности</li>
                     <li>Мобильных приложений для iOS и Android</li>
@@ -108,12 +117,14 @@
         </div>
 
         <div class="partners-logos">
-            <ul class="partners-logos-list">
-                <li><a href="#" class="partner-logo"><img src="img/logo-1.png" width="199" height="68"></a></li>
-                <li><a href="#" class="partner-logo"><img src="img/logo-2.png" width="209" height="90"></a></li>
-                <li><a href="#" class="partner-logo"><img src="img/logo-3.png" width="185" height="52"></a></li>
-                <li><a href="#" class="partner-logo"><img src="img/logo-4.png" width="173" height="84"></a></li>
-            </ul>
+            <div class="wrap">
+                <ul class="partners-logos-list">
+                    <li><a href="#" class="partner-logo"><img src="img/logo-1.png" width="199" height="68"></a></li>
+                    <li><a href="#" class="partner-logo"><img src="img/logo-2.png" width="209" height="90"></a></li>
+                    <li><a href="#" class="partner-logo"><img src="img/logo-3.png" width="185" height="52"></a></li>
+                    <li><a href="#" class="partner-logo"><img src="img/logo-4.png" width="173" height="84"></a></li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
