--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                 </ul>
             </div>
             <div class="index-info-stat">
-                <span class="stat-h">С 2004 года любим точность во всем:</span>
+                <span class="stat-title">С 2004 года любим точность во всем:</span>
+                <div class="index-container">
                 <div class="stat-left">
                     <span class="stat-percent">146%</span>
                     <span class="stat-description">Уровень самоотдачи</span>
@@ -112,6 +113,7 @@
                 <div class="stat-right">
                     <span class="stat-percent">50%</span>
                     <span class="stat-description">Минимальная предоплата</span>
+                </div>
                 </div>
             </div>
         </div>
