добавил слайдер, фильтр, спрайт

--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,20 @@
         <div class="left-column">
 
             <div class="filters">
-                <form action="#" method="post" class="sort-form">
+                    <form action="form.php" method="GET">
+                        <div class="range-filter">
+                            <div class="range-controls">
+                                <div class="scale">
+                                    <div class="bar" style="margin-left: 20%; width: 30%"></div>
+                                </div>
+                                <div class="toggle toggle-min"></div>
+                                <div class="toggle toggle-max"></div>
+                            </div>
+                            <div class="price-controls">
+                                <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+                                <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+                            </div>
+                        </div>
 
                     <fieldset class="filters-groups filters-radio">
                         <legend>Сетка:</legend>
@@ -103,10 +116,10 @@
                 </ul>
                 <ul class="sort-list-direct">
                     <li class="sort-btn">
-                        <a href="#" class="sort-btn-down">По возрастанию</a>
+                        <a href="#" class="sort-btn-up sort-btn-active">По убыванию</a>
                     </li>
                     <li class="sort-btn">
-                        <a href="#" class="sort-btn-up sort-btn-active">По убыванию</a>
+                        <a href="#" class="sort-btn-down">По возрастанию</a>
                     </li>
                 </ul>
             </div>
