--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
                 <li class="navigation-item"><a href="#">Магазин</a></li>
                 <li class="navigation-item"><a href="#">Контакты</a></li>
             </ul>
-            <a href="#" class="basket">Корзина</a>
+            <a href="#" class="cart">Корзина</a>
         </nav>
     </div>
 </header>
