--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
             <ul class="navigation-list">
                 <li class="navigation-item"><a href="#">Студия</a></li>
                 <li class="navigation-item"><a href="#">Клиенты</a></li>
-                <li class="navigation-item"><a href="#">Магазин</a></li>
+                <li class="navigation-item navigation-active"><span>Магазин</span></li>
                 <li class="navigation-item"><a href="#">Контакты</a></li>
             </ul>
             <a href="#" class="cart">Корзина</a>
@@ -197,7 +197,7 @@
                 <li class="pagination-item pagination-item-active"><a href="#">1</a></li>
                 <li class="pagination-item"><a href="#">2</a></li>
                 <li class="pagination-item"><a href="#">3</a></li>
-                <li class="pagination-item"><a href="#">Следующая</a></li>
+                <li class="pagination-item pagination-item-next"><a href="#">Следующая</a></li>
             </ul>
 
         </div>
