--- a/index.html
+++ b/index.html
@@ -48,42 +48,22 @@
                 </div>
                 <div class="slide">
                     <div class="slide-text">
-                        <div class="slide-title">Дорого, скрупулезно</div>
-                        <p>Математически выверенный дизайн<br>
-                            для вашего сайта или мобильного приложения.</p>
+                        <div class="slide-title">Любим математику как никто другой</div>
+                        <p>Никакого креатива только математические формулы<br>
+                            для расчета идеальных пропорций.</p>
                         <a class="btn" href="#">Узнать больше</a>
                     </div>
                 </div>
                 <div class="slide">
                     <div class="slide-text">
-                        <div class="slide-title">Скрупулезно</div>
-                        <p>Математически выверенный дизайн<br>
-                            для вашего сайта или мобильного приложения.</p>
+                        <div class="slide-title">Только ночь, только хардкор</div>
+                        <p>Работать днем, как все? Мы против этого.<br>
+                            Ближе к полуночи работа только начинается.</p>
                         <a class="btn" href="#">Узнать больше</a>
                     </div>
                 </div>
             </div>
         </div>
-
-
-        <!--<div class="promo-info">
-
-
-           <div class="h">Дорого, долго, скурпулезно.</div>
-           <p>Математически выверенный дизайн<br>
-               для вашего сайта или мобильного приложения.
-           </p>
-           <a href="#" class="btn promo-info-btn">Узнать больше</a>
-       </div>
-       <div class="promo-slider">
-           <div class="promo-slider-first">
-           </div>
-           <div class="promo-slider-second">
-           </div>
-           <div class="promo-slider-third">
-           </div>
-       </div>
-       -->
     </div>
 </div>
 
