--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="features-left">
 
             <div class="features-description">
-                <h3>Веб сайты</h3>
+                <h3>Веб-сайты</h3>
                 <p>Мир никогда не будет прежним
                     после того как увидит ваш сайт!</p>
                 <a href="#" class="btn features-left-btn">Заказать</a>
