--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
     <div class="index-info">
         <div class="wrap">
             <div class="index-info-description">
-                <h2>Мы - маленька, но гордая дизайн-студия из Краснодара.</h2>
+                <h2>Мы — маленькая, но гордая дизайн-студия из Краснодара.</h2>
                 <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива.
                     Работаем не покладая рук, как роботы.</p>
-                <span class="index-info-title">Выполянем заказы на разработку:</span>
+                <span class="index-info-title">Выполняем заказы на разработку:</span>
                 <ul>
                     <li>Веб-сайтов любой сложности</li>
                     <li>Мобильных приложений для iOS и Android</li>
@@ -113,15 +113,15 @@
                 <span class="stat-title">С 2004 года любим точность во всем:</span>
                 <div class="index-container">
                     <div class="stat-left">
-                        <span class="stat-percent">146%</span>
+                        <span class="stat-percent">146<sup>%</sup></span>
                         <span class="stat-description">Уровень самоотдачи</span>
                     </div>
                     <div class="stat-center">
-                        <span class="stat-percent">100%</span>
+                        <span class="stat-percent">100<sup>%</sup></span>
                         <span class="stat-description">Соблюдение сроков</span>
                     </div>
                     <div class="stat-right">
-                        <span class="stat-percent">50%</span>
+                        <span class="stat-percent">50<sup>%</sup></span>
                         <span class="stat-description">Минимальная предоплата</span>
                     </div>
                 </div>
