главная страница готова (кроме карты)

--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
         <div class="partners-logos">
             <div class="wrap">
                 <ul class="partners-logos-list">
-                    <li><a href="#" class="partner-logo"><img src="img/logo-1.png" width="199" height="68"></a></li>
-                    <li><a href="#" class="partner-logo"><img src="img/logo-2.png" width="209" height="90"></a></li>
-                    <li><a href="#" class="partner-logo"><img src="img/logo-3.png" width="185" height="52"></a></li>
-                    <li><a href="#" class="partner-logo"><img src="img/logo-4.png" width="173" height="84"></a></li>
+                    <li><a href="#" class="partner-logo"><img class="logo-one" src="img/logo-1.png" width="199" height="68"></a></li>
+                    <li><a href="#" class="partner-logo"><img class="logo-two" src="img/logo-2.png" width="209" height="90"></a></li>
+                    <li><a href="#" class="partner-logo"><img class="logo-three" src="img/logo-3.png" width="185" height="52"></a></li>
+                    <li><a href="#" class="partner-logo"><img class="logo-four" src="img/logo-4.png" width="173" height="84"></a></li>
                 </ul>
             </div>
         </div>
