--- a/catalog.html
+++ b/catalog.html
@@ -36,6 +36,7 @@
         <div class="left-column">
 
             <div class="filters">
+                <legend>Стоимость:</legend>
                     <form action="form.php" method="GET">
                         <div class="range-filter">
                             <div class="range-controls">
