--- a/catalog.html
+++ b/catalog.html
@@ -112,7 +112,7 @@
                         <a href="#">По типу</a>
                     </li>
                     <li class="sort-item">
-                        <a href="#">По рейтингу</a>
+                        <a href="#">По названию</a>
                     </li>
                 </ul>
                 <ul class="sort-list-direct">
@@ -127,9 +127,10 @@
 
             <div class="items">
                 <article class="item">
-                    <div class="item-header"></div>
+                    <div class="item-img">
                     <a href="#"><img src="img/img-sedona.jpg" width="360" height="576"
                                      alt="Sedona"></a>
+                    </div>
                     <div class="item-description item-description-active">
                         <span class="item-name">Sedona</span>
                         <span class="item-about">Информационный сайт для туристов</span>
@@ -138,9 +139,10 @@
                 </article>
 
                 <article class="item">
-                    <div class="item-header"></div>
+                    <div class="item-img">
                     <a href="#"><img src="img/img-pink.jpg" width="360" height="576"
                                      alt="pink"></a>
+                    </div>
                     <div class="item-description">
                         <span class="item-name">Pink</span>
                         <span class="item-about">Cайт</span>
@@ -149,9 +151,10 @@
                 </article>
 
                 <article class="item">
-                    <div class="item-header"></div>
+                    <div class="item-img">
                     <a href="#"><img src="img/img-barbershop.jpg" width="360" height="576"
                                      alt="Бербершоп"></a>
+                    </div>
                     <div class="item-description item-description-active">
                         <span class="item-name">Барбершоп</span>
                         <span class="item-about">Барбершоп "Бородинский"</span>
@@ -160,9 +163,10 @@
                 </article>
 
                 <article class="item">
-                    <div class="item-header"></div>
+                    <div class="item-img">
                     <a href="#"><img src="img/img-mishka.jpg" width="360" height="576"
                                      alt="Mishka"></a>
+                    </div>
                     <div class="item-description item-description-active">
                         <span class="item-name">Mishka</span>
                         <span class="item-about">Интернет магазин</span>
@@ -171,9 +175,10 @@
                 </article>
 
                 <article class="item">
-                    <div class="item-header"></div>
+                    <div class="item-img">
                     <a href="#"><img src="img/img-aplus.jpg" width="360" height="576"
                                      alt="Academy"></a>
+                    </div>
                     <div class="item-description item-description-active">
                         <span class="item-name">Academy</span>
                         <span class="item-about">Информационный сайт Академии</span>
@@ -182,9 +187,10 @@
                 </article>
 
                 <article class="item">
-                    <div class="item-header"></div>
+                    <div class="item-img">
                     <a href="#"><img src="img/img-kvast.jpg" width="360" height="576"
                                      alt="Кваст"></a>
+                    </div>
                     <div class="item-description item-description-active">
                         <span class="item-name">Кваст</span>
                         <span class="item-about">Крафтовый квас</span>
