начал делать форму

--- a/catalog.html
+++ b/catalog.html
@@ -213,7 +213,13 @@
 
 <div class="map">
     <img src="img/map.jpg" width="1440" height="416" alt="карта">
-    <div class="map-address"></div>
+    <div class="map-address">
+        <h2 class="map-titile">Nёrds design studio</h2>
+        <p>191186, Санкт-Петербург,<br>
+            ул. Б. Конюшенная, д. 19/8</p>
+        <span>тел. +7(812) 275-75-75</span>
+        <a class="btn" href="#">Напишите нам</a>
+    </div>
 </div>
 
 <footer class="main-footer">
