--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
 
 <div class="content-inner">
     <div class="wrap">
-        <div class="left-column">
+        <aside class="left-column">
 
             <div class="filters">
                 <legend>Стоимость:</legend>
@@ -97,7 +97,7 @@
             </div>
 
 
-        </div>
+        </aside>
         <div class="right-column">
 
             <div class="sort">
@@ -212,7 +212,6 @@
 </div>
 
 <div class="map">
-    <img src="img/map.jpg" width="1440" height="416" alt="карта">
     <div class="map-address">
         <h2 class="map-titile">Nёrds design studio</h2>
         <p>191186, Санкт-Петербург,<br>
