--- a/catalog.html
+++ b/catalog.html
@@ -128,11 +128,11 @@
             <div class="items">
                 <article class="item">
                     <div class="item-img">
-                    <a href="#"><img src="img/img-sedona.jpg" width="360" height="576"
-                                     alt="Sedona"></a>
+                    <img src="img/img-sedona.jpg" width="360" height="576"
+                                     alt="Sedona">
                     </div>
                     <div class="item-description item-description-active">
-                        <span class="item-name">Sedona</span>
+                        <a href="#" class="item-name">Sedona</a>
                         <span class="item-about">Информационный сайт для туристов</span>
                         <a class="btn item-btn">9 900 Руб.</a>
                     </div>
