--- a/catalog.html
+++ b/catalog.html
@@ -37,20 +37,20 @@
 
             <div class="filters">
                 <legend>Стоимость:</legend>
-                    <form action="form.php" method="GET">
-                        <div class="range-filter">
-                            <div class="range-controls">
-                                <div class="scale">
-                                    <div class="bar" style="margin-left: 7%; width: 60%"></div>
-                                </div>
-                                <div class="toggle toggle-min"></div>
-                                <div class="toggle toggle-max"></div>
+                <form action="form.php" method="GET">
+                    <div class="range-filter">
+                        <div class="range-controls">
+                            <div class="scale">
+                                <div class="bar" style="margin-left: 7%; width: 60%"></div>
                             </div>
-                            <div class="price-controls">
-                                <label class="min-price">от <input name="min-price" type="text" value="0"></label>
-                                <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
-                            </div>
+                            <div class="toggle toggle-min"></div>
+                            <div class="toggle toggle-max"></div>
                         </div>
+                        <div class="price-controls">
+                            <label class="min-price">от <input name="min-price" type="text" value="0"></label>
+                            <label class="max-price">до <input name="max-price" type="text" value="15000"></label>
+                        </div>
+                    </div>
 
                     <fieldset class="filters-groups filters-radio">
                         <legend>Сетка:</legend>
@@ -128,8 +128,8 @@
             <div class="items">
                 <article class="item">
                     <div class="item-img">
-                    <img src="img/img-sedona.jpg" width="360" height="576"
-                                     alt="Sedona">
+                        <img src="img/img-sedona.jpg" width="360" height="576"
+                             alt="Sedona">
                     </div>
                     <div class="item-description">
                         <a href="#" class="item-name">Sedona</a>
@@ -140,8 +140,8 @@
 
                 <article class="item">
                     <div class="item-img">
-                    <img src="img/img-pink.jpg" width="360" height="576"
-                                     alt="pink">
+                        <img src="img/img-pink.jpg" width="360" height="576"
+                             alt="pink">
                     </div>
                     <div class="item-description">
                         <a href="#" class="item-name">Sedona</a>
@@ -152,8 +152,8 @@
 
                 <article class="item">
                     <div class="item-img">
-                   <img src="img/img-barbershop.jpg" width="360" height="576"
-                                     alt="Бербершоп">
+                        <img src="img/img-barbershop.jpg" width="360" height="576"
+                             alt="Бербершоп">
                     </div>
                     <div class="item-description">
                         <a href="#" class="item-name">Sedona</a>
@@ -164,8 +164,8 @@
 
                 <article class="item">
                     <div class="item-img">
-                    <img src="img/img-mishka.jpg" width="360" height="576"
-                                     alt="Mishka">
+                        <img src="img/img-mishka.jpg" width="360" height="576"
+                             alt="Mishka">
                     </div>
                     <div class="item-description">
                         <a href="#" class="item-name">Sedona</a>
@@ -176,8 +176,8 @@
 
                 <article class="item">
                     <div class="item-img">
-                    <img src="img/img-aplus.jpg" width="360" height="576"
-                                     alt="A plus">
+                        <img src="img/img-aplus.jpg" width="360" height="576"
+                             alt="A plus">
                     </div>
                     <div class="item-description">
                         <a href="#" class="item-name">Sedona</a>
@@ -188,8 +188,8 @@
 
                 <article class="item">
                     <div class="item-img">
-                  <img src="img/img-kvast.jpg" width="360" height="576"
-                                     alt="Кваст">
+                        <img src="img/img-kvast.jpg" width="360" height="576"
+                             alt="Кваст">
                     </div>
                     <div class="item-description">
                         <a href="#" class="item-name">Sedona</a>
@@ -212,34 +212,36 @@
 </div>
 
 <div class="map">
-    <!--  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104365163!2d30.320894615798533!3d59.938794181876176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1488253773067"
-              width="100%" height="416" style="border:0" allowfullscreen></iframe> -->
-    <div class="map-address">
-        <h2 class="map-titile">Nёrds design studio</h2>
-        <p>191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8</p>
-        <span>тел. +7(812) 275-75-75</span>
-        <a class="btn modal-content-btn" href="#">Напишите нам</a>
-    </div>
+    <div class="wrap">
+        <!--  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104365163!2d30.320894615798533!3d59.938794181876176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1488253773067"
+                  width="100%" height="416" style="border:0" allowfullscreen></iframe> -->
+        <div class="map-address">
+            <h2 class="map-titile">Nёrds design studio</h2>
+            <p>191186, Санкт-Петербург,<br>
+                ул. Б. Конюшенная, д. 19/8</p>
+            <span>тел. +7(812) 275-75-75</span>
+            <a class="btn modal-content-btn" href="#">Напишите нам</a>
+        </div>
 
-    <div class="modal-content">
-        <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-        <form class="feedback" action="/echo" method="post">
-            <legend>Напишите нам</legend>
-            <div class="name">
-                <label for="name">Ваше имя:</label><input type="text" name="name" id="name" value=""
-                                                          placeholder="Представьтесь, пожалуйста">
-            </div>
-            <div class="mail">
-                <label for="mail">Ваш e-mail:</label><input type="text" name="mail" id="mail" value=""
-                                                            placeholder="Для отправки ответа">
-            </div>
-            <div class="letter-area">
-                <label for="letter">Текст письма:</label>
-                <textarea rows="5" name="letter" id="letter" placeholder="В свободной форме"></textarea>
-            </div>
-            <button type="submit" class="btn">Отправить</button>
-        </form>
+        <div class="modal-content">
+            <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+            <form class="feedback" action="/echo" method="post">
+                <legend>Напишите нам</legend>
+                <div class="name">
+                    <label for="name">Ваше имя:</label><input type="text" name="name" id="name" value=""
+                                                              placeholder="Представьтесь, пожалуйста">
+                </div>
+                <div class="mail">
+                    <label for="mail">Ваш e-mail:</label><input type="text" name="mail" id="mail" value=""
+                                                                placeholder="Для отправки ответа">
+                </div>
+                <div class="letter-area">
+                    <label for="letter">Текст письма:</label>
+                    <textarea rows="5" name="letter" id="letter" placeholder="В свободной форме"></textarea>
+                </div>
+                <button type="submit" class="btn">Отправить</button>
+            </form>
+        </div>
     </div>
 
 </div>
