--- a/index.html
+++ b/index.html
@@ -147,34 +147,36 @@
 
 
 <div class="map">
-  <!--  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104365163!2d30.320894615798533!3d59.938794181876176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1488253773067"
-            width="100%" height="416" style="border:0" allowfullscreen></iframe> -->
-    <div class="map-address">
-        <h2 class="map-titile">Nёrds design studio</h2>
-        <p>191186, Санкт-Петербург,<br>
-            ул. Б. Конюшенная, д. 19/8</p>
-        <span>тел. +7(812) 275-75-75</span>
-        <a class="btn modal-content-btn" href="#">Напишите нам</a>
-    </div>
+    <div class="wrap">
+        <!--  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.599104365163!2d30.320894615798533!3d59.938794181876176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1488253773067"
+                  width="100%" height="416" style="border:0" allowfullscreen></iframe> -->
+        <div class="map-address">
+            <h2 class="map-titile">Nёrds design studio</h2>
+            <p>191186, Санкт-Петербург,<br>
+                ул. Б. Конюшенная, д. 19/8</p>
+            <span>тел. +7(812) 275-75-75</span>
+            <a class="btn modal-content-btn" href="#">Напишите нам</a>
+        </div>
 
-    <div class="modal-content">
-        <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-        <form class="feedback" action="/echo" method="post">
-            <legend>Напишите нам</legend>
-            <div class="name">
-                <label for="name">Ваше имя:</label><input type="text" name="name" id="name" value=""
-                                                          placeholder="Представьтесь, пожалуйста">
-            </div>
-            <div class="mail">
-                <label for="mail">Ваш e-mail:</label><input type="text" name="mail" id="mail" value=""
-                                                            placeholder="Для отправки ответа">
-            </div>
-            <div class="letter-area">
-                <label for="letter">Текст письма:</label>
-                <textarea rows="5" name="letter" id="letter" placeholder="В свободной форме"></textarea>
-            </div>
-            <button type="submit" class="btn">Отправить</button>
-        </form>
+        <div class="modal-content">
+            <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+            <form class="feedback" action="/echo" method="post">
+                <legend>Напишите нам</legend>
+                <div class="name">
+                    <label for="name">Ваше имя:</label><input type="text" name="name" id="name" value=""
+                                                              placeholder="Представьтесь, пожалуйста">
+                </div>
+                <div class="mail">
+                    <label for="mail">Ваш e-mail:</label><input type="text" name="mail" id="mail" value=""
+                                                                placeholder="Для отправки ответа">
+                </div>
+                <div class="letter-area">
+                    <label for="letter">Текст письма:</label>
+                    <textarea rows="5" name="letter" id="letter" placeholder="В свободной форме"></textarea>
+                </div>
+                <button type="submit" class="btn">Отправить</button>
+            </form>
+        </div>
     </div>
 
 </div>
