--- a/catalog.html
+++ b/catalog.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Nerd's</title>
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/normalize.min.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -260,6 +260,6 @@
     </div>
 </footer>
 
-<script src="js/script.js"></script>
+<script src="js/script.min.js"></script>
 </body>
 </html>
